--- a/assets/css/componentes.css
+++ b/assets/css/componentes.css
@@ -1,24 +1,16 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
-}
 
 
 
 /* Headers */
-header {
-    background-color: #21252B;
-    padding: 10px;
-}
-.navbar {
-    display: flex;
 
+.header__button {
+    margin-right: .75rem;
 }
+
+.header__icon {
+    fill: #fff;
+}
+
 .search-form {
 
     display: flex;
@@ -29,34 +21,39 @@ header {
 }
 
 
-.search-form .form-input {
+.search-form__input {
     display: block;
     width: 100%;
     padding: .375rem .75rem;
     font-size: 1rem;
     font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
+    line-height: 1.6;
+    color: var(--color-grey-dark-2);
     background-color: #fff;
     background-clip: padding-box;
-    border: 1px solid #ced4da;
+    border: 1px solid var(--color-grey-light-2);
     border-radius: .25rem;
     margin-right: 13px;
-    margin-left: 13px;
+    margin-right: -2rem;
 }
 
+
+.search_form__icon {
+    width: 1.25rem;
+    height: 1.25rem;
+    fill: var(--color-grey-dark-2);
+    
+}
 .btn {
     display: inline-block;
     font-weight: 400;
     line-height: 1.5;
-    color: #fff;
     text-align: center;
     text-decoration: none;
     vertical-align: middle;
     cursor: pointer;
     user-select: none;
-    background-color: transparent;
-    border: 1px solid transparent;
+    border: none;
     padding: .375rem .75rem;
     font-size: 1rem;
     border-radius: .25rem;
@@ -84,10 +81,8 @@ ul li {
 }
 
 /* Cartões */
-a.link-card {
-    text-decoration: none;
-}
-.cards {
+
+.galeria {
     display: flex;
     flex-direction: column;
     padding-top: 10px;
@@ -96,27 +91,29 @@ a.link-card {
     
 }
 
-.box-card {
-    border: 1px solid #6c757d;
+.galeria__item {
+    background-color: #fff;
+}
+
+.cartoes__cartao {
+
+    border: 1px solid rgba(0,0,0,.125);
     margin-bottom: 20px;
+    
     
     
 }
 
-.box-card .card-text {
+.cartoes__texto {
     padding: 10px;
     border-top: 1px solid #6c757d;
 }
 
-.card-text ul li {
 
-}
 img {
     max-width: 100%;
 }
-.img-box-card img {
-    
-}
+
 
 /* Selecionadores */
 
@@ -128,4 +125,45 @@ img {
 
 .selectors a {
     padding: 3px;
+}
+
+/* INFORMAÇÕES - CAIXAS */
+
+.caixa-info {
+
+    border: 1px solid rgba(0,0,0,.125);
+
+}
+
+.caixa-info > div {
+    padding: 1rem 1rem .5rem;
+}
+
+.caixa-info__item {
+
+    display: flex;
+    flex-direction: column;
+
+}
+
+.caixa-info__titulo {
+    font-size: 1.5rem;
+    font-weight: 300;
+    color: var(--color-grey-dark-1);
+    
+}
+.caixa-info__cabecalho {
+    text-transform: uppercase;
+    
+    color: var(--color-grey-dark-1);
+    font-size: .75rem;
+}
+
+.caixa-info__descricao {
+    font-size: 1.1rem;
+}
+
+.caixa-info__header {
+    font-size: 1rem;
+    font-weight: 100;   
 }
