criação da modulo do comando municipal

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -12,9 +12,10 @@
 
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #212529;;
-  --color-grey-dark-3: #999;
+  --color-grey-dark-3: #21252B;
 
   --shadow-dark:  0 2rem, 6 rem rgba(0, 0, 0, 0.3);
+  --line: 1px solid var(--color-grey-light-);
   
 
 
@@ -35,11 +36,11 @@
 }
 html {
   box-sizing: border-box;
-  font-size: 1rem; // 1rem 10px, 10px/16px = 62.5%
+  font-size: 1rem; 
 }
 
 body {
-  background-color: #eb2f64;
+  /* background-color: #eb2f64; */
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   /* line-height: 1.6; */
@@ -49,8 +50,8 @@ body {
 }
 
 .cont {
-    padding-right: 15px;
-    padding-left: 15px;
+    padding-right: 0px;
+    padding-left: 0px;
     margin-right: auto;
     margin-left: auto;
 }
@@ -82,7 +83,7 @@ body {
   border-color: #dc3545;
 }
 
-.btn--icon {
+.btn-icone {
   border: none;
   background-color: transparent;
 
@@ -115,14 +116,36 @@ body {
 /* BACKGROUNDS */
 
 .bg-black {
-  background-color: #21252B;
+  background-color: var(--color-grey-dark-3);
 }
 
+/* ALERTAS */
+
+.alertas {
+  position: relative;
+  padding: 1rem 1rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  width: 100%;
+}
+
+.alerta-vermelho {
+  color: #842029;
+    background-color: #f8d7da;
+    border-color: #f5c2c7;
+}
+
+.alerta-normal {
+  color: #084298;
+  background-color: #cfe2ff;
+  border-color: #b6d4fe;
+}
 /* IMAGENS */
 
 /* ICONES */
 
-.icon--padrao {
+.icone--padrao {
   width: 2rem;
   height: 2rem;
   fill: var(--color-grey-dark-1);
@@ -152,6 +175,18 @@ a {
 }
 .mgt-10 {
   margin-top: 10px;
+}
+.mgd-10 {
+  margin-right: 10px;
+}
+.mgd-20 {
+  margin-right: 10px;
+}
+.mge-10 {
+  margin-left: 10px;
+}
+.mge-20 {
+  margin-left: 10px;
 }
 
 
@@ -185,15 +220,23 @@ a {
       flex-direction: column;
 
     }
+    
   }
 
   @media (min-width: 1200px) {
-    
+
+
+    .esconde-grande {
+      display: none;
+    }
     .responsive-item {
       width: 30%;
     }
     .cont {
-      max-width: 720px;
+      max-width: 1140px;
+    }
+    .cont--side {
+      max-width: 1000px;
     }
   }
 
