--- a/assets/css/componentes.css
+++ b/assets/css/componentes.css
@@ -3,15 +3,47 @@
 
 /* Headers */
 
-.header__button {
+.cabecalho {
+    
+}
+.cabecalho__logo {
+    /* margin-left: 2rem; */
+}
+.cabecalho__img {
+    height: 2.75rem;
+    width: 2.75rem;
+    border-radius: 50%;
+    /* margin-right: 1rem; */
+}
+.cabecalho__botao {
     margin-right: .75rem;
 }
 
-.header__icon {
+
+.cabecalho__icone {
     fill: #fff;
 }
 
-.search-form {
+.cabecalho__nav{
+        
+    display: flex;
+    align-items: center;
+    align-self: stretch;
+}
+.cabecalho__link-aplicacao{
+    padding: .5rem 3rem;
+
+}
+.cabecalho__nome-usuario, .cabecalho__nome-aplicacao{
+        padding: 0 1rem;
+        cursor: pointer;
+        height: 100%;
+
+        
+        
+    }
+
+.pesquisa-form {
 
     display: flex;
     flex-grow: 8;
@@ -21,9 +53,14 @@
 }
 
 
-.search-form__input {
-    display: block;
+.pesquisa-form__input {
+    
     width: 100%;
+}
+
+.input--text {
+    display: block;
+    height: 2.5rem;
     padding: .375rem .75rem;
     font-size: 1rem;
     font-weight: 400;
@@ -38,12 +75,19 @@
 }
 
 
-.search_form__icon {
+.pesquisa-form__icone {
     width: 1.25rem;
     height: 1.25rem;
     fill: var(--color-grey-dark-2);
     
 }
+
+.pesquisa-form__botao--normal {
+    display: block;
+    margin-left: 2rem;
+    height: 2.5rem;
+}
+
 .btn {
     display: inline-block;
     font-weight: 400;
@@ -59,6 +103,43 @@
     border-radius: .25rem;
     /* transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out; */
 }
+
+/* BARRA LATERAL */
+
+
+.navegacao-lateral {
+    
+}
+.navegacao-lateral__item {
+    text-decoration: none;
+    list-style: none;
+}
+.navegacao-lateral__link {
+    
+}
+.navegacao-lateral__link:link, 
+.navegacao-lateral__link:visited {
+    color: var(--color-grey-dark-1);
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
+    padding: 1rem 3rem;
+    display: flex;
+    align-items: center;
+}
+.navegacao-lateral__botao {
+    color: #fff !important;
+    margin: 1rem 2rem;
+    justify-content: center;
+    
+}
+.navegacao-lateral__icone {
+    width: 1.75rem;
+    height: 1.75rem;
+    margin-right: 2rem;
+    fill: currentColor;
+}
+
 
 /* Listas */
 
@@ -136,14 +217,31 @@ img {
 }
 
 .caixa-info > div {
+}
+
+.caixa-info__titulo {
+
     padding: 1rem 1rem .5rem;
+
 }
 
 .caixa-info__item {
-
+    padding: 1.25rem 0;
+    margin: 0 1.25rem;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    border-bottom: 1px solid rgba(0,0,0,.125);
 
+}
+.caixa-info__item:last-child {
+    border: none;
+}
+.caixa-info__cabecalho {
+    flex: 1;
+}
+
+.caixa-info__descricao {
+    flex: 4;
 }
 
 .caixa-info__titulo {
@@ -163,7 +261,21 @@ img {
     font-size: 1.1rem;
 }
 
+.caixa-info__botao {
+    margin: 1.25rem;
+}
+
 .caixa-info__header {
     font-size: 1rem;
     font-weight: 100;   
 }
+
+@media (max-width: 576px) {
+    
+    .caixa-info__item {
+
+        flex-direction: column;
+        align-items: flex-start;
+    
+    }
+  }
