criando a interface do login e cadastro

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -60,6 +60,16 @@ body {
   .center-t {
     text-align: center !important;
   }
+
+  /* TEXTOS E FONTES */
+
+  .text--cinza {
+    color: #6c757d !important;
+  }
+  .fonte--normal {
+    font-weight: 400;
+  }
+
   
 /* BOTOES COR */
 
