--- a/assets/css/componentes.css
+++ b/assets/css/componentes.css
@@ -10,8 +10,8 @@
     /* margin-left: 2rem; */
 }
 .cabecalho__img {
-    height: 2.75rem;
-    width: 2.75rem;
+    height: 1.75rem;
+    width: 1.75rem;
     border-radius: 50%;
     /* margin-right: 1rem; */
 }
@@ -33,6 +33,13 @@
 .cabecalho__link-aplicacao{
     padding: .5rem 3rem;
 
+
+}
+.cabecalho__nome-aplicacao {
+    color: var(--color-grey-dark-2);
+    font-weight: 700;
+    font-size: 1.5rem;
+
 }
 .cabecalho__nome-usuario, .cabecalho__nome-aplicacao{
         padding: 0 1rem;
@@ -43,6 +50,8 @@
         
     }
     .cabecalho__nome-usuario {
+        color: #6c757d;
+        font-weight: 300;
         
     }
 
@@ -51,8 +60,7 @@
     display: flex;
     flex-grow: 8;
     align-items: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
+
 }
 
 
@@ -81,7 +89,7 @@
 .pesquisa-form__icone {
     width: 1.25rem;
     height: 1.25rem;
-    fill: var(--color-grey-dark-2);
+    fill: var(--cor-secundaria);
     
 }
 
@@ -90,7 +98,19 @@
     margin-left: 2rem;
     height: 2.5rem;
 }
-
+.cabecalho-direito__links-direito {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.cabecalho-direito__icone {
+    width: 1.5rem;
+    height: 1.5rem;
+    fill: var(--cor-secundaria);
+}
+.cabecalho-direito__links-2 {
+    display: flex;
+}
 .btn {
     display: inline-block;
     font-weight: 400;
@@ -162,6 +182,20 @@ ul li {
 
 .img-principal img {
     width: 100px
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 11;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    padding-top: 60px;
 }
 
 /* Cartões */
@@ -333,6 +367,147 @@ img {
     font-size: 2rem;
   }
 
+/* PAGINA PRINCIPAL */
+
+/* VISAO GERAL */
+.visao-geral__div {
+    flex-basis: 31%;
+    border: 1px solid rgba(0,0,0,.125);
+    padding: 10px;
+    color: #6c757d;
+
+    /* color: #fff; */
+
+}
+
+.visao-geral__titulo {
+    margin-bottom: .5rem;
+    font-weight: 300;
+    font-size: 2rem;
+    border-bottom: 2px solid rgba(0,0,0,.125);
+  }
+
+.visao-geral {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+.btn-groupo__botao {
+    margin-right: 10px;
+}
+
+/* PAGINAÇÃO */
+
+.paginacao {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    font-size: 1.2rem;
+    font-weight: 300;
+    border-bottom: var(--grey-border);
+    align-items: center;
+}
+
+.paginacao__paragrafo {
+
+}
+
+.paginacao__digitos {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.paginacao__resultados {
+
+}
+.paginacao__controles {
+    display: flex;
+    align-items: center;
+}
+
+.paginacao__icone {
+    width: 1.3rem;
+    height: 1rem;
+    fill: var(--cor-secundaria);
+    align-self: center  ;
+}
+/* OPCOES */
+
+.opcoes-documentos {
+    display: flex;
+    font-size: 1.2rem;
+    margin-top: 5px;
+    width: 100%;
+    border-bottom: var(--grey-border);
+
+}
+.opcoes-documentos__div {
+    flex-basis: 20%;
+    text-align: center;
+    padding: 10px;
+    font-weight: 500;
+}
+.opcoes-documento__link--desactivado {
+    color: var(--cor-secundaria);
+}
+.opcoes-documento__div--activada {
+    border-bottom: 2px solid var(--cor-primaria);
+}
+/* TABELAS */
+
+.tabela {
+    --bs-tabela-bg: transparent;
+    --bs-tabela-striped-color: #212529;
+    --bs-tabela-striped-bg: rgba(0, 0, 0, 0.05);
+    --bs-tabela-active-color: #212529;
+    --bs-tabela-active-bg: rgba(0, 0, 0, 0.1);
+    --bs-tabela-hover-color: #212529;
+    --bs-tabela-hover-bg: rgba(0, 0, 0, 0.075);
+    width: 100%;
+    margin-bottom: 1rem;
+    color: #212529;
+    vertical-align: top;
+    border-color: #dee2e6;
+    text-align: left;
+}
+
+.tabela {
+    width: 100%;
+    margin-bottom: 1rem;
+    background-color: transparent;
+  }
+  
+  .tabela th,
+  .tabela td {
+    padding: 0.75rem;
+    vertical-align: top;
+    /* border-top: 1px solid #dee2e6; */
+  }
+  
+  .tabela thead th {
+    vertical-align: bottom;
+    /* border-bottom: 2px solid #dee2e6; */
+  }
+  
+  .tabela tbody + tbody {
+    border-top: 2px solid #dee2e6;
+  }
+  
+  .tabela .tabela {
+    background-color: #fff;
+  }
+  
+ 
+  
+  .tabela-striped tbody tr:nth-of-type(odd) {
+    background-color: rgba(0, 0, 0, 0.05);
+  }
+  
+  .tabela-hover tbody tr:hover {
+    background-color: rgba(0, 0, 0, 0.075);
+  }
+  
   
 @media (max-width: 576px) {
     
@@ -342,4 +517,21 @@ img {
         align-items: flex-start;
     
     }
-  }
+
+    .cabecalho-direito {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-between;
+    }
+
+    .cabecalho-direito > * {
+        width: 100%;
+        
+    }
+
+    .cabecalho-direito__links-direito {
+        padding-bottom: 10px;
+    }
+    
+    
+}
