--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -12,7 +12,7 @@
 
 .barra-lateral {
     background-color: var(--color-grey-light-3);
-
+    height: 100vh;
     
     flex-direction: column;
 }
@@ -25,8 +25,17 @@
     display: flex;
     flex: 1;
     align-items: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .main {
     flex: 1;
+}
+
+@media (max-width: 576px) {
+      
+    .barra-lateral {
+        display: none;
+      }
 }
