E2 - F7 - Editar posto, E1 - Funcionalidade 10 - Listar Agentes, E2 - F1 - Adicionar Posto, E2 - F3 - Eliminar Posto, E2 - E4 - Ver Posto, E2 - E5 - Listar Postos, E2- F6 - Registro de alterações, Etapa 2 - Postos

--- a/assets/css/componentes.css
+++ b/assets/css/componentes.css
@@ -247,6 +247,25 @@ img {
 
 /* INFORMAÇÕES - CAIXAS */
 
+.content-div {
+
+    border: 1px solid rgba(0,0,0,.125);
+
+}
+
+.content-div > div {
+    padding: .75rem;
+}
+
+.content-div__cima {
+    border-bottom: 1px solid rgba(0,0,0,.125);
+}
+
+.content-div__titulo {
+    border: none;
+    margin: 0;
+}
+
 .caixa-info {
 
     border: 1px solid rgba(0,0,0,.125);
