Etapa 4 - Categorias de Documento, Etapa 3 - Bairros

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -53,4 +53,14 @@
     .barra-lateral {
         display: none;
       }
+
+    .mais {
+        flex-direction: column;
+    }
+
+    .mais > div {
+        width: 100%;
+        margin-bottom: 30px ;
+    }
+
 }
