E3 - F3 - Editar Bairros(revisto)

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,6 +1,6 @@
 :root {
 
-  --color-primary: #0d6efd;
+  --color-primary: rgb(13, 110, 253);
   --color-primary-light: #FF3366;
   --color-primary-dark: #BA265D;
 
