--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -14,12 +14,23 @@
 .conteudo {
     display: flex;
 }
-
+.principal {
+    margin-left: 321px;
+    margin-top: 70px;
+}
+.cabecalho--top { /* hack ISSO DEVE SER DEVIDAMENTE ESTILIZADO*/
+    position: fixed;
+    width: 78%;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+}
 .barra-lateral {
     background-color: var(--color-grey-light-3);
     height: 100vh;
-    
+    position: fixed; /* hack ISSO DEVE SER DEVIDAMENTE ESTILIZADO*/
     flex-direction: column;
+    z-index: 11;
 }
 .barra-lateral, .cabecalho__link-aplicacao  {
     flex: 0 0 22%;
