--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -217,6 +217,10 @@ a {
   border: 1px solid var(--color-grey-light-5);
 }
 
+pl-10 {
+  padding: 0 10px;
+}
+
 .mgb-20 {
   margin-bottom: 20px;
 }
