--- a/assets/css/componentes.css
+++ b/assets/css/componentes.css
@@ -89,7 +89,12 @@
     margin-right: -2rem;
 }
 
-
+.tabela--imagem {
+    width: 120px;
+    height: auto;
+    border-radius: 50%;
+    /* margin-right: 1rem; */
+}
 .pesquisa-form__icone {
     width: 1.25rem;
     height: 1.25rem;
